--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
     <!-- Instructions and verious buttons will be added here by JavaScript -->
 </div>
 <!-- pop up messages -->
-<div id="RawInputContainer" style="margin-bottom: 10px;">
-	<label for="fileInput">Raw Data Import</label>
+<div id="InputContainer" style="margin-bottom: 10px;">
+	<label for="fileInput">Data Import</label>
 	<input type="file" id="fileInput" accept=".json">
-</div>
-<div id="PreAnnotatedInputContainer" style="margin-bottom: 10px;">
-	<label for="PAfileInput">PreAnnotated Data Import:</label>
-	<input type="file" id="PAfileInput" accept=".json">
 </div>
 <div id="dataContainer" style="margin-top:20px;">
      <!-- Container for document divs -->
